# apple-rag-assistant

./: .gitignore  README.md  main.py  pyproject.toml
app/: classifier.py  config.py  grading.py  graph.py  ingestion.py  main_api.py  reranking.py  retrieval.py  web_search.py
data/: apple_fruit.txt  apple_inc.txt
notebooks/: 1_ingestion.ipynb
ui/: next.config.ts  package-lock.json  package.json
ui/app/: page.tsx
ui/components/: ChatInput.tsx  ChatMessage.tsx  MetadataSidebar.tsx  RelevanceBar.tsx
ui/lib/: api.ts
ui/types/: chat.ts
