[project]
name = "apple-rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "fastapi>=0.138.0",
    "google-cloud-aiplatform>=1.158.0",
    "langchain>=1.3.9",
    "langchain-cohere>=0.6.0",
    "langchain-community>=0.4.2",
    "langchain-google-vertexai>=3.2.4",
    "langchain-openai>=1.3.2",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "pinecone>=6.0.0,<8.0.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "ragas==0.2.10",
    "tavily-python>=0.7.26",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
